# cchistory

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  HIGH_LEVEL_DESIGN_FREEZE.md  PIPELINE.md  README.md  README_CN.md  package-lock.json  package.json  pnpm-lock.yaml  tasks.csv  tsconfig.base.json
docs/: README.md  (+9 more)
server/: .cchistory-8085-v3.sqlite3  pyproject.toml
server/cchistory/: __init__.py  config.py  main.py  models.py
server/cchistory/connectors/: __init__.py  base.py  brave.py  claude_code.py  config.py  models.py
server/cchistory/datasources/: __init__.py  base.py  brave.py  claude_code.py  registry.py
server/cchistory/db/: __init__.py  migrations.py  repository.py
server/cchistory/db/migrations/: 0001_initial_index.sql  (+1 more)
server/cchistory/distill/: __init__.py  session.py
server/cchistory/ingestion/: __init__.py  orchestrator.py  runtime.py  scheduler.py
server/cchistory/ops/: __init__.py  benchmarking.py  drift.py
server/cchistory/routers/: chat2history.py  distill.py  entries.py  history.py  ingest.py  search.py  sources.py
server/cchistory/schema/: __init__.py
server/cchistory/services/: __init__.py  status.py
server/scripts/: benchmark_index.py
server/tests/: __init__.py  connector_conformance.py  test_api.py  test_benchmarks.py  test_brave.py  test_chat2history_api.py  test_claude_code.py  test_connector_impls.py  test_connector_sdk.py  test_contracts.py  test_db.py  test_distill_api.py  test_drift.py  test_entries_api.py  test_ingest_api.py  test_ingestion.py  test_repository.py  test_scheduler.py  test_schema.py
(+394 files in other folders)
